--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,14 +7,10 @@ spring:
     locations: classpath:db/migration
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
   datasource:
     username: andrey
     password: pass
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5400/database1
-statuses:
-  default-status: Новое
-  work-status: В работе
-  complete-status: Готово
