--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
             <version>2.7.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -121,6 +127,12 @@
                         <schema>database1</schema>
                     </schemas>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.1</version>
             </plugin>
         </plugins>
     </build>
